--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Your awesome title
 email: joekim29@gmail.com
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/NikolaeVarius.github.io" # the subpath of your site, e.g. /blog/
 #url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
